# paper-dig

./: README.md  pyproject.toml
src/paper_ai/keyword_extractor/simple_keyword_extractor/: simple_keyword_extractor.py
src/paper_ai/markdown_extractor/: datalab_extractor.py
src/paper_ai/paper_reader/: paper_reader.py
src/paper_ai/summarizer/semantic_summarizer/: semantic_summarizer.py
src/paper_tools/: paper_reader.py  pdf_to_markdown.py  summarizer.py
src/paper_tools/keyword_extractor/: __init__.py
src/paper_tools/keyword_extractor/simple_keyword_extractor/: simple_keyword_extractor.py
src/paper_tools/paper_reader/: paper_reader.py
src/paper_tools/summarizer/: __init__.py
src/paper_tools/summarizer/semantic_summarizer/: semantic_summarizer.py
