[project]
name = "paper-tools"
version = "0.1.0"
description = "Paper Tools is a collection of tools for processing and analyzing papers."
readme = "README.md"
authors = [
    { name = "Kamal", email = "kamal.farahani90@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
]

[project.scripts]
paper-tools = "paper_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "langchain[openai]>=0.3.25",
]
